--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,12 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Electron</title>
+    <title>Pet Pal</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
     />
+    <style>
+      body {
+        background-color: transparent;
+      }
+    </style>
   </head>
 
   <body>
